# FEM

./: CMakeLists.txt  README.md  plik.txt
Header Files/: Element.h  FileReader.h  FiniteElement.h  Grid.h  Matrix.h  Node.h  ShapeFunction.h  UniversalElement.h
MES_PROJECTS/: CMakeLists.txt
MES_PROJECTS/Header Files/: Element.h  FileReader.h  Grid.h  Node.h
MES_PROJECTS/Source Files/: Element.cpp  FileReader.cpp  Grid.cpp  Node.cpp  main.cpp
MES_PROJECTS/libs/: json.hpp
Source Files/: Element.cpp  FileReader.cpp  FiniteElement.cpp  Grid.cpp  Matrix.cpp  ShapeFunction.cpp  UniversalElement.cpp  main.cpp
